@@ -72,4 +72,6 @@ dependencyManagement {
 
 tasks.named('test') {
     useJUnitPlatform()
+
+    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
 }
